[#542] Make use of Java 9 features by using the MR JAR feature to allow running on Java 11. Fixes #542. Fix mixed nested collection update